# heck

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: camel.rs  cases.rs  compact_lower.rs  compact_upper.rs  convert_case.rs  dot.rs  human.rs  kebab.rs  lib.rs  lower_camel.rs  mid_sentence.rs  mixed.rs  shouty_dot.rs  shouty_kebab.rs  shouty_snake.rs  snake.rs  tables.rs  title.rs  train.rs  upper.rs  upper_camel.rs
tables/: Cargo.toml
tables/src/: allowed_in_word.rs  letter_casing.rs  main.rs  nonspacing_marks.rs  titlecase.rs  unicode_data.rs
