[package]
authors = ["Without Boats <woboats@gmail.com>"]
name = "heck"
version = "0.3.0"
license = "MIT OR Apache-2.0"
description = "heck is a case conversion library."
homepage = "https://github.com/withoutboats/heck"
repository = "https://github.com/withoutboats/heck"
documentation = "https://docs.rs/heck"
keywords = ["string", "case", "camel", "snake", "unicode"]
readme = "README.md"

[dependencies]
unicode-segmentation = "1.2.0"
