[package]
name = "heck"
version = "0.5.0-rc.1"
edition = "2021"
rust-version = "1.56"
license = "MIT OR Apache-2.0"
description = "heck is a case conversion library."
repository = "https://github.com/withoutboats/heck"
keywords = ["string", "case", "camel", "snake", "unicode"]
categories = ["no-std"]
include = ["src/**/*", "LICENSE-*", "README.md", "CHANGELOG.md"]

[dependencies]
# Optional Dependency if you want to increase the performance of Case from_str
phf = { version = "0.11", default-features = false, features = [
    "macros",
], optional = true }

[features]
std = ["phf?/std"]
